# popkurs

./: Cargo.toml
resources/: ATTRIBUTIONS.md  style.css
src/: api_handler.rs  device.rs  device_widget.rs  main.rs  main_window.rs
src/custom_widgets/: details_widget.rs  device_widget.rs  mod.rs
