[package]
name = "el-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_8"] }
gdk = "0.13"
glib = "0.18.3"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gdk-sys = "0.18.0"
async-channel = "2.1.1"

[build-dependencies]
glib-build-tools = "0.18.0"
